# travel-copilot

./: .gitignore  README.md  app.py  requirements.txt
server/: agent.py  ai_client.py  main.py  mcp_client.py  mcp_server.py  pyproject.toml
server/prompts/: styles.py
server/tools/: captions.py  itinerary.py  reels.py
